# librespot-python

./: pyproject.toml
librespot/: core.py
librespot/proto/: Authentication_pb2.py
